<resources>
    <string name="app_name">TimerBlip</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="alarm_set">Alarm Set</string>
    <string name="alarm_not_set">No Alarm Set</string>
    <string name="next_alarm">Next alarm: %1tT</string>
    <string name="set_alarm">Start</string>
    <string name="cancel_alarm">Stop</string>
    <string name="permission_warning">Notification permission is required for app to function</string>
    <!-- Strings used for fragments for navigation -->
    <string name="home_fragment_label">Home Fragment</string>
    <string name="settings_fragment_label">Settings Fragment</string>
    <string name="start_time_fragment_label">Start Time Fragment</string>
    <string name="end_time_fragment_label">End Time Fragment</string>
    <string name="interval_fragment_label">Interval Fragment</string>

    <string name="settings">Settings</string>
    <string name="home">Home</string>
    <string name="next">Next</string>

    <string name="start_time_display">Start time: %1tT</string>
    <string name="start_time">Start time</string>
    <string name="end_time_display">End time: %1tT</string>
    <string name="interval_display">Every %2d minutes</string>
    <string name="end_time">End time</string>
    <string name="interval">Interval</string>
    <string name="set_times">Set times</string>
</resources>