<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".MainActivity"
    tools:deviceIds="wear">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding"
        app:layout_boxedEdges="all">

        <TextView
            android:id="@+id/alarmSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_set"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/alarmNotSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alarm_not_set"
            android:visibility="invisible" />

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@android:string/cancel"
            android:translationY="60dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/setButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/set_alarm"
            android:translationY="60dp"
            android:visibility="invisible" />

    </FrameLayout>
</androidx.wear.widget.BoxInsetLayout>